# iso17442

./: .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml
.devcontainer/: devcontainer.json  post-attach.sh
.github/workflows/: ci.yml  codeql.yml  coverage.yml  release-plz.yml
types/: CHANGELOG.md  Cargo.toml  README.md
types/src/: alloc.rs  alloc_.rs  lib.rs  serde_.rs
