[package]
name = "iso17442-types"
description = "ISO 17442 Types"
readme = "README.md"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = ["alloc"]
alloc = []

[dependencies]
ref-cast.workspace = true
thiserror.workspace = true
yare.workspace = true

[lints]
workspace = true