[package]
name = "iso17442-types"
description = "ISO 17442 Types"
readme = "README.md"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = ["alloc", "serde"]
alloc = ["serde/alloc"]
serde = ["dep:serde"]

[dependencies]
ref-cast.workspace = true
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true}
thiserror.workspace = true
yare.workspace = true

[lints]
workspace = true
